src/components/button/__mean-oval/button__mean-oval.scss
@import "@variables";

.mean-oval-buttons {
  display: grid;
  grid-gap: 30px;

  &__array {
    display: grid;
    grid-template-columns: repeat(2, auto);
    grid-gap: 30px 20px;
  }
}

.mean-oval-button {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 15px;
  margin: 0;
  box-sizing: border-box;

  &__elem,
  &__thumb,
  &__background {
    cursor: pointer;
  }

  &:hover .mean-oval-button__background {
    opacity: .5;
  }

  &__background {
    position: absolute;
    border-radius: 22px;
    height: 44px;
    width: 100%;
    background: $primary-gradient;
    z-index: 11;
    transition: opacity 200ms ease;
  }

  &__thumb {
    position: relative;
    margin-inline: 2px;
    border-radius: 20px;
    height: 40px;
    width: 100%;
    box-sizing: border-box;
    background: #fff;
    z-index: 12;
  }

  &__elem {
    appearance: none;
    border: none;
    background: transparent;
    text-transform: uppercase;
    font-size: 12px;
    font-family: inherit;
    font-weight: bold;
    color: #fff;
    z-index: 13;

    &:not(:active) {
      @extend %ripple;
    }

    &:disabled {
      & + label {
        opacity: .5;
      }
    }
  }

  &__icon {
    position: absolute;
    color: #fff;
    right: 0px;
    z-index: 13;
    margin-right: 10px;
  }
}

.button-style {
  &_contained,
  &_outlined {
    height: 44px;
  }

  &_outlined {
    .mean-oval-button__elem {
      color: $perfume;
      position: absolute;
    }
  }

  &_text {
    width: max-content;
    white-space: nowrap;
    transition: opacity .5s ease;

    & .mean-oval-button__elem {
      color: $perfume;
      padding: 0;

      &:hover,
      &:disabled {
        color: $valhalla;
        opacity: .5;
      }
    }
  }
}

.js-mean-oval-button {
  &_hidden {
    opacity: 0;
    pointer-events: none;
  }
}

%ripple {
  animation: rippling 180ms ease forwards;
}

@keyframes rippling {
  0%   { transform: scale(1); }
  66%  { transform: scale(0.94); }
  100% { transform: scale(1); }
}

